<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.17">
  <DUT Name="ST_BeamStabilizer" Id="{e4491502-131c-49e7-b3b3-d813ca570319}">
    <Declaration><![CDATA[TYPE ST_BeamStabilizer :
STRUCT
	bError AT %I* : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>